refactor(messaging): simplify consumer threading